# mesh

./: .gitignore  BENCHMARKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  docs.yml
crates/mesh-cli/: Cargo.toml
crates/mesh-cli/src/: main.rs  output.rs
crates/mesh-cli/src/commands/: convert.rs  decimate.rs  info.rs  mod.rs  repair.rs  shell.rs  slice.rs  validate.rs
crates/mesh-gpu/: Cargo.toml
crates/mesh-gpu/benches/: gpu_benchmarks.rs
crates/mesh-gpu/src/: buffers.rs  collision.rs  context.rs  error.rs  lib.rs  sdf.rs  surface_nets.rs
crates/mesh-gpu/src/shaders/: collision.wgsl  sdf_compute.wgsl  surface_nets.wgsl
crates/mesh-repair/: Cargo.toml
crates/mesh-repair/benches/: mesh_benchmarks.rs
crates/mesh-repair/examples/: pipeline_config.rs
crates/mesh-repair/src/: adjacency.rs  assembly.rs  boolean.rs  builder.rs  components.rs  decimate.rs  error.rs  fitting.rs  holes.rs  intersect.rs  io.rs  lattice.rs  lib.rs  measure.rs  morph.rs  multiscan.rs  pipeline.rs  pointcloud.rs  printability.rs  region.rs  registration.rs  remesh.rs  repair.rs  scan.rs  slice.rs  subdivide.rs  template.rs  thickness.rs  tracing_ext.rs  types.rs  validate.rs  winding.rs
crates/mesh-repair/tests/: coverage_tests.rs  cross_validation.rs  format_conformance.rs  proptest_mesh.rs  thingi10k_conformance.rs  visual_regression.rs
crates/mesh-shell/: Cargo.toml
crates/mesh-shell/benches/: shell_benchmarks.rs
crates/mesh-shell/src/: builder.rs  error.rs  lib.rs
crates/mesh-shell/src/offset/: adaptive.rs  extract.rs  grid.rs  mod.rs  sdf.rs  transfer.rs
crates/mesh-shell/src/shell/: generate.rs  mod.rs  rim.rs
docs/: book.toml
docs/book/: 404.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-56526106.js  toc-6b2f994a.js  toc.html
docs/book/api/: mesh-cli.html  mesh-repair.html  mesh-shell.html
docs/book/best-practices/: errors.html  memory.html  performance.html  testing.html
docs/book/contributing/: architecture.html  setup.html
docs/book/examples/: basic-repair.html  batch.html  gallery.html  scan-to-shell.html
docs/book/getting-started/: concepts.html  installation.html  quick-start.html
docs/book/guide/: boolean.html  decimation.html  io.html  pipeline.html  remeshing.html  repair.html  shell.html  subdivision.html  validation.html
docs/book/troubleshooting/: common.html  faq.html
docs/book/tutorials/: helmets.html  medical.html  overview.html  protective.html  shoes.html
docs/src/: 404.md  SUMMARY.md  introduction.md
docs/src/api/: mesh-cli.md  mesh-repair.md  mesh-shell.md
docs/src/best-practices/: errors.md  memory.md  performance.md  testing.md
docs/src/contributing/: architecture.md  setup.md
docs/src/examples/: basic-repair.md  batch.md  gallery.md  scan-to-shell.md
docs/src/getting-started/: concepts.md  installation.md  quick-start.md
docs/src/guide/: boolean.md  decimation.md  io.md  pipeline.md  remeshing.md  repair.md  shell.md  subdivision.md  validation.md
docs/src/troubleshooting/: common.md  faq.md
docs/src/tutorials/: helmets.md  medical.md  overview.md  protective.md  shoes.md
