[workspace]
resolver = "2"
members = ["crates/mesh-cli",
    "crates/mesh-gpu",
    "crates/mesh-repair",
    "crates/mesh-shell",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bigmark222/mesh"
keywords = ["mesh", "3d", "stl", "shell", "repair"]
categories = ["graphics", "algorithms"]

[workspace.dependencies]
# Linear algebra
nalgebra = "0.33"

# Mesh I/O
stl_io = "0.10"
tobj = "4.0"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.37"
ply-rs = "0.1"

# Geometry processing
parry3d = "0.17"
mesh_to_sdf = "0.4"
fast-surface-nets = "0.2"

# Data structures
hashbrown = "0.15"

# Error handling
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Parallel processing
rayon = "1.10"

# Spatial indexing
kiddo = "4"

# Testing
tempfile = "3"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

# STEP/CAD export (truck ecosystem)
truck-topology = "0.5"
truck-geometry = "0.5"
truck-modeling = "0.6"
truck-stepio = "0.3"

# UUID generation (for 3MF production extension)
uuid = { version = "1", features = ["v4"] }

# GPU compute (wgpu ecosystem)
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
