[package]
name = "mesh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line interface for mesh processing and repair"

[[bin]]
name = "mesh"
path = "src/main.rs"

[dependencies]
mesh-repair = { version = "0.2", path = "../mesh-repair" }
mesh-shell = { version = "0.2", path = "../mesh-shell" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
miette.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
