[package]
name = "mesh-shell"
description = "Generate shells around 3D meshes using SDF-based offset"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["mesh", "3d", "shell", "offset", "sdf"]
categories = ["graphics", "algorithms"]

[dependencies]
mesh-repair = { version = "0.2", path = "../mesh-repair" }
mesh-gpu = { version = "0.2", path = "../mesh-gpu", optional = true }
nalgebra.workspace = true
hashbrown.workspace = true
thiserror.workspace = true
miette.workspace = true
tracing.workspace = true
parry3d.workspace = true
mesh_to_sdf.workspace = true
fast-surface-nets.workspace = true
rayon.workspace = true
kiddo.workspace = true

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true
proptest.workspace = true

[features]
default = []
gpu = ["mesh-gpu"]

[[bench]]
name = "shell_benchmarks"
harness = false
